feat : 권한 캐싱 및 삭제